--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -76,6 +76,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: .5rem
 }
 
+.text-lovegame {
+    margin-top: 60px
+}
+
 p {
     margin-top: 0;
     margin-bottom: 1rem
